--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,15 @@
 .App {
   text-align: center;
+  /* background-color: rgb(184, 184, 184); */
+  background-color: rgb(197, 197, 197) !important;
+  background-image: url(./sources/texture.png);
+  max-height: 100%;
+  text-decoration: none !important;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -32,6 +31,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
